--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h2>Catégories</h2>
             <ul>
                 <li><a href="#maths">Mathématiques</a></li>
+                <li><a href="#italien">Italien</a></li>
             </ul>
         </section>
         
@@ -42,10 +43,32 @@
                 </li>
             </ul>
         </section>
+        <section id="italien">
+        <h2>Italien</h2>
+            <ul>
+            <li>
+                <a href="fiches/italien/fiche-de-revision-1-italien.html" target="_blank">
+                    Fiche 1
+                </a>
+            </li>
+            <li>
+                <a href="fiches/italien/fiche-de-revision-2-italien.html" target="_blank">
+                    Fiche 2
+                </a>
+            </li>
+            <li>
+                <a href="fiches/italien/fiche-de-revision-3-italien.html" target="_blank">
+                    Fiche 3
+                </a>
+            </li>
+        <!-- Ajoute d'autres liens ici -->
+    </ul>
+</section>
+
     </main>
     
     <footer>
-        <p>© 2024 - Mes Fiches de Révision. Créé avec l'aide de GodlySky.</p>
+        <p>© 2024 - Mes Fiches de Révision. Fiches de maths créé avec l'aide de GodlySky.</p>
     </footer>
 </body>
 </html>
