--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2>Italien</h2>
             <ul>
             <li>
-                <a href="fiches/italien/fiche-de-revision-1-italien" target="_blank">
+                <a href="fiches/italien/fiche-de-revision-1-italien.html" target="_blank">
                     Fiche 1
                 </a>
             </li>
