--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul>
                 <li>
                     <a href="fiches/demontrer-points-plan.html" target="_blank">
-                        Démontrer que des points forment un plan ou non
+                        Démontrer que des points forment un plan
                     </a>
                 </li>
                 <li>
