--- a/fiches/representation-parametrique-droite.html
+++ b/fiches/representation-parametrique-droite.html
@@ -121,12 +121,12 @@
                 <div class="bracket">{</div>
                 <div class="equations">
                     <div>x = 3t + 4</div>
-                    <div>y = -t + 1</div>
+                    <div>y = -t + 1       , t ∈ ℝ,</div> 
                     <div>z = -3t + 2</div>
                 </div>
             </div>
         </div>
-        <p>avec <span class="unknown">t</span> ∈ ℝ,</p>
+        <p>avec t ∈ ℝ,</p>
         <p>et avec <span class="vector">AB</span> (3 ; -1 ; -3) et <span class="point">A</span> (4 ; 1 ; 2).</p>
     </div>
 </body>
