--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                         Représentation paramétrique d'une droite
                     </a>
                 </li>
+                <li>
+                    <a href="fiches/demontrer-point-appartient-droite.html" target="_blank">
+                        Démontrer qu'un point appartient à une droite à l'aide de la représentation paramétrique
+                    </a>
+                </li>
             </ul>
         </section>
         <section id="italien">
