--- a/fiches/representation-parametrique-droite.html
+++ b/fiches/representation-parametrique-droite.html
@@ -121,7 +121,7 @@
                 <div class="bracket">{</div>
                 <div class="equations">
                     <div>x = 3t + 4</div>
-                    <div>y = -t + 1       , t ∈ ℝ,</div> 
+                    <div>y = -t + 1       ,t ∈ ℝ</div> 
                     <div>z = -3t + 2</div>
                 </div>
             </div>
