--- a/fiches/demontrer-2-droites-paralleles.html
+++ b/fiches/demontrer-2-droites-paralleles.html
@@ -141,28 +141,7 @@
         <ul>
             <li><span class="vector">AB</span>(3 ; -1 ; 3) et <span class="vector">FD</span>(0 ; -1 ; 6)</li>
         </ul>
-        <p><span class="point">F</span> appartient à <span class="line">(AB)</span> s'il existe un réel t tel que</p>
-        <div class="parametric">
-            <div class="system">
-                <div class="bracket">{</div>
-                <div class="equations">
-                    <div>1 = 3t + 4</div>
-                    <div>0 = -t + 1      ,t ∈ ℝ</div>
-                    <div>-5 = -3t + 2</div>
-                </div>
-            </div>
-        </div>
-        <p>On résout le système suivant, ce qui nous donne :</p>
-        <div class="parametric">
-            <div class="system">
-                <div class="bracket">{</div>
-                <div class="equations">
-                    <div>t = -1</div>
-                    <div>t = 1</div>
-                    <div>t = 7/3</div>
-                </div>
-            </div>
-        </div>
-        <p>Le système n'est pas compatible. <span class="point">F</span> n'appartient donc pas à la droite <span class="line">(AB)</p>
+            <li>Or <span class="unknown">x<sub><span class="line">(AB)</span></sub></span> = 3 ≠ 0 et <span class="unknown">x<sub><span class="line">(FD)</span></sub></span> = 0</li>
+        <p>Les vecteurs <span class="vector">AB</span> et <span class="vector">FD</span> ne sont pas colinéaires donc les droites <span class="line">(AB)</span> et <span class="line">(FD)</span> ne sont pas parallèles.</p>
 </body>
 </html>
