--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                         Démontrer qu'un point appartient à une droite à l'aide de la représentation paramétrique
                     </a>
                 </li>
+                <li>
+                    <a href="fiches/demontrer-2-droites-paralleles.html" target="_blank">
+                        Démontrer que 2 droites sont parallèles
+                    </a>
+                </li>
             </ul>
         </section>
         <section id="italien">
