--- a/fiches/demontrer-2-droites-paralleles.html
+++ b/fiches/demontrer-2-droites-paralleles.html
@@ -141,7 +141,7 @@
         <ul>
             <li><span class="vector">AB</span>(3 ; -1 ; 3) et <span class="vector">FD</span>(0 ; -1 ; 6)</li>
         </ul>
-            <li>Or <span class="unknown">x<sub><span class="line">(AB)</span></sub></span> = 3 ≠ 0 et <span class="unknown">x<sub><span class="line">(FD)</span></sub></span> = 0</li>
+            <li>Or <span class="unknown">x<sub><span class="vector">(AB)</span></sub></span> = 3 ≠ 0 et <span class="unknown">x<sub><span class="vector">(FD)</span></sub></span> = 0</li>
         <p>Les vecteurs <span class="vector">AB</span> et <span class="vector">FD</span> ne sont pas colinéaires donc les droites <span class="line">(AB)</span> et <span class="line">(FD)</span> ne sont pas parallèles.</p>
 </body>
 </html>
