--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                         Démontrer que 2 droites sont parallèles
                     </a>
                 </li>
+                <li>
+                    <a href="fiches/produit-sacalaire-dans-l'espace.html" target="_blank">
+                        Démontrer que des points forment un plan
+                    </a>
+                </li>
             </ul>
         </section>
         <section id="italien">
