--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </li>
                 <li>
                     <a href="fiches/produit-sacalaire-dans-l'espace.html" target="_blank">
-                        Démontrer que des points forment un plan
+                        Chapitre : produit scalaire dans l'espace
                     </a>
                 </li>
             </ul>
