--- a/fiches/produit-scalaire-dans-l'espace.html
+++ b/fiches/produit-scalaire-dans-l'espace.html
@@ -135,7 +135,8 @@
 
 <body>
   <p>
-    <a> <span class="vector">u</span> . <span class="vector">v</span> = II<span class="vector">u</span>II * II<span class="vector">v</span>II * cos(<span class="vector">u</span> ; <span class="vector">v</span>)
+    La formule du produit scalaire :   
+    <a> <span class="vector">u</span> . <span class="vector">v</span> = II<span class="vector">u</span>II * II<span class="vector">v</span>II * cos(<span class="vector">u</span> ; <span class="vector">v</span>)</a>     
   </p>
 
 
